# fsiltok

./: .gitignore  LICENSE  README.md  pyproject.toml
fsiltok/: builder.py  jsonl.py  main.py
fsiltok/utils/: data.py
