[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fsiltok"
version = "0.1.0"
description = "A very simple tokenizer for FSIL"
authors = [
    { name="Rodrigo Loza", email="roloa7@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "transformers",
    "orjson",
    "xopen",
    "tqdm",
    "numpy"
]